fix alignment

--- a/includes/assets/css/hq-admin.css
+++ b/includes/assets/css/hq-admin.css
@@ -164,7 +164,7 @@
 .hq-submit-login-button-wrapper{
     display: flex;
     flex: 1;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-content: center;
 }
 .hq-admin-submit-button{
